--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
     <h1 class="text-center">Phone Finder</h1>
 
     <div class="container">
-        <div class="d-flex">
-            <input id="input-value" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <div class="d-flex mb-5">
+            <input id="search-field" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button onclick="searchButton()" class="btn btn-outline-success" type="submit">Search</button>
         </div>
     </div>
+
+    <h2 id="error" class="text-center text-danger"></h2>
+    
+    <div class="container">
+        <div id="main" class="row"></div>
+    </div>
+    
 
     <script src="js/phone-finder.js"></script>
 </body>
