phone details added

--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
             <button onclick="searchButton()" class="btn btn-outline-success" type="submit">Search</button>
         </div>
     </div>
-
+    <!-- error -->
     <h2 id="error" class="text-center text-danger"></h2>
     
+    <!-- Phone Details -->
+    <div id="phone-details" class="container"></div>
+
+    <!-- cards -->
     <div class="container">
         <div id="main" class="row"></div>
     </div>
