--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h2 id="error" class="text-center text-danger"></h2>
     
     <!-- Phone Details -->
-    <div id="phone-details" class="container"></div>
+    <div id="phone-details" class="container mx-auto d-flex justify-content-center"></div>
 
     <!-- cards -->
     <div class="container">
