--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <h1 class="text-center">Phone Finder</h1>
+    <h1 class="text-center text-danger mb-5">Phone Finder</h1>
 
-    <div class="container">
+    <div class="container w-50">
         <div class="d-flex mb-5">
             <input id="search-field" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button onclick="searchButton()" class="btn btn-outline-success" type="submit">Search</button>
