--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <h1 class="text-center text-danger mb-5">Phone Finder</h1>
-
+    
+    <!-- search box -->
     <div class="container w-50">
         <div class="d-flex mb-5">
             <input id="search-field" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -28,7 +29,7 @@
         <div id="main" class="row"></div>
     </div>
     
-
+    <!-- js script -->
     <script src="js/phone-finder.js"></script>
 </body>
 </html>
